// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card snapshots With child divs 1`] = `
.c0 {
  background-color: white;
  border: 1px solid #dcdce7;
  border-radius: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<Card>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Card-sc-3vnjrr-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "background-color:white;border:1px solid ",
            "#dcdce7",
            ";border-radius:3px;display:flex;flex:0 0 auto;flex-direction:column;position:relative;",
            [Function],
            ";",
          ],
        },
        "displayName": "Card",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Card-sc-3vnjrr-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    >
      <div>
        1
      </div>
      <div>
        2
      </div>
      <div>
        3
      </div>
    </div>
  </StyledComponent>
</Card>
`;

exports[`Card snapshots Without Children 1`] = `
.c0 {
  background-color: white;
  border: 1px solid #dcdce7;
  border-radius: 3px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<Card>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Card-sc-3vnjrr-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "background-color:white;border:1px solid ",
            "#dcdce7",
            ";border-radius:3px;display:flex;flex:0 0 auto;flex-direction:column;position:relative;",
            [Function],
            ";",
          ],
        },
        "displayName": "Card",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Card-sc-3vnjrr-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    />
  </StyledComponent>
</Card>
`;
